refactor: improve handling of timestamps and array expressions in pipeline